--- a/src/Resources/views/admin/layout.html.twig
+++ b/src/Resources/views/admin/layout.html.twig
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf8" />
     <title>Projekt neve</title>
-    <link rel="stylesheet" href="{{ app.request.basepath }}/css/bootstrap.css" />
+    <link rel="stylesheet" href="{{ app.request.basepath }}/css/bootstrap.min.css" />
     <link rel="stylesheet" href="{{ app.request.basepath }}/css/backend.css" />
     {% block head %}{% endblock %}
   </head>
